vis graphs and train curves added

--- a/tensorflow_basics.ipynb
+++ b/tensorflow_basics.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -432,23 +432,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 6.09568\n",
-      "Epoch 100 MSE = 5.03491\n",
-      "Epoch 200 MSE = 4.96098\n",
-      "Epoch 300 MSE = 4.92778\n",
-      "Epoch 400 MSE = 4.90319\n",
-      "Epoch 500 MSE = 4.88385\n",
-      "Epoch 600 MSE = 4.86848\n",
-      "Epoch 700 MSE = 4.85622\n",
-      "Epoch 800 MSE = 4.84638\n",
-      "Epoch 900 MSE = 4.83847\n"
+      "Epoch 0 MSE = 6.28807\n",
+      "Epoch 100 MSE = 4.90312\n",
+      "Epoch 200 MSE = 4.86835\n",
+      "Epoch 300 MSE = 4.85093\n",
+      "Epoch 400 MSE = 4.83848\n",
+      "Epoch 500 MSE = 4.82938\n",
+      "Epoch 600 MSE = 4.82269\n",
+      "Epoch 700 MSE = 4.81777\n",
+      "Epoch 800 MSE = 4.81413\n",
+      "Epoch 900 MSE = 4.81144\n"
      ]
     }
    ],
@@ -495,23 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 7.07905\n",
-      "Epoch 100 MSE = 4.98361\n",
-      "Epoch 200 MSE = 4.92228\n",
-      "Epoch 300 MSE = 4.89142\n",
-      "Epoch 400 MSE = 4.86896\n",
-      "Epoch 500 MSE = 4.8524\n",
-      "Epoch 600 MSE = 4.84017\n",
-      "Epoch 700 MSE = 4.8311\n",
-      "Epoch 800 MSE = 4.82436\n",
-      "Epoch 900 MSE = 4.81932\n"
+      "Epoch 0 MSE = 7.666\n",
+      "Epoch 100 MSE = 4.96916\n",
+      "Epoch 200 MSE = 4.88587\n",
+      "Epoch 300 MSE = 4.86344\n",
+      "Epoch 400 MSE = 4.84886\n",
+      "Epoch 500 MSE = 4.83809\n",
+      "Epoch 600 MSE = 4.83\n",
+      "Epoch 700 MSE = 4.8239\n",
+      "Epoch 800 MSE = 4.81927\n",
+      "Epoch 900 MSE = 4.81575\n"
      ]
     }
    ],
@@ -553,23 +553,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 9.55318\n",
-      "Epoch 100 MSE = 4.88115\n",
-      "Epoch 200 MSE = 4.82529\n",
-      "Epoch 300 MSE = 4.81718\n",
-      "Epoch 400 MSE = 4.8132\n",
-      "Epoch 500 MSE = 4.81045\n",
-      "Epoch 600 MSE = 4.80848\n",
-      "Epoch 700 MSE = 4.80704\n",
-      "Epoch 800 MSE = 4.80601\n",
-      "Epoch 900 MSE = 4.80526\n"
+      "Epoch 0 MSE = 9.2771\n",
+      "Epoch 100 MSE = 5.07277\n",
+      "Epoch 200 MSE = 4.95421\n",
+      "Epoch 300 MSE = 4.91567\n",
+      "Epoch 400 MSE = 4.88872\n",
+      "Epoch 500 MSE = 4.86864\n",
+      "Epoch 600 MSE = 4.85353\n",
+      "Epoch 700 MSE = 4.84212\n",
+      "Epoch 800 MSE = 4.83345\n",
+      "Epoch 900 MSE = 4.82684\n"
      ]
     }
    ],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -732,90 +732,6 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch  0 MSE =  4.27216\n",
-      "Epoch  100 MSE =  4.65465\n",
-      "Epoch  200 MSE =  5.03598\n",
-      "Epoch  300 MSE =  5.04383\n",
-      "Epoch  400 MSE =  4.51255\n",
-      "Epoch  500 MSE =  5.10193\n",
-      "Epoch  600 MSE =  4.6594\n",
-      "Epoch  700 MSE =  4.49823\n",
-      "Epoch  800 MSE =  4.84197\n",
-      "Epoch  900 MSE =  5.39028\n"
-     ]
-    }
-   ],
-   "source": [
-    "n_epochs = 1000\n",
-    "learning_rate = 0.01\n",
-    "\n",
-    "X = tf.placeholder(tf.float32, shape=(None, n+1), name=\"X\")\n",
-    "y = tf.placeholder(tf.float32, shape=(None, 1), name=\"y\")\n",
-    "\n",
-    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
-    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
-    "error = y_pred - y\n",
-    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
-    "\n",
-    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
-    "\n",
-    "training_op = optimizer.minimize(mse)\n",
-    "\n",
-    "init = tf.global_variables_initializer()\n",
-    "\n",
-    "saver = tf.train.Saver()\n",
-    "# saver = tf.train.Saver({\"weights\": theta})\n",
-    "\n",
-    "batch_size = 100\n",
-    "n_batches = int(np.ceil(m / batch_size))\n",
-    "\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(init)\n",
-    "    \n",
-    "    for epoch in range(n_epochs):\n",
-    "        for batch_index in range(n_batches):\n",
-    "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
-    "            _, mse_val = sess.run([training_op, mse], feed_dict={X: X_batch, y: y_batch})\n",
-    "        if epoch % 100 == 0: # checkpoint every 100 epochs\n",
-    "            save_path = saver.save(sess, \"./tmp/my_model.ckpt\")\n",
-    "            print(\"Epoch \", epoch, \"MSE = \", mse_val)\n",
-    "\n",
-    "# restoring your model\n",
-    "# with tf.Sesson() as sess:\n",
-    "    # saver.restore(sess, \"./tmp/my_model_final.ckpt\") \n",
-    "\n",
-    "    \n",
-    "    best_theta = theta.eval()\n",
-    "    save_path = saver.save(sess, \"./tmp/my_model_final.ckpt\")    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visualizing the Graph and Training Curves Using TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The TensorBoard nicely display interactive visulizations of some taining stats you feed in your webv browser (e.g., learning curves).\n",
-    "1. writes the graph definition and some training stats - the training error (MSE).\n",
-    "2. need to use a different log directory every time you run your program: include a timestamp in the log directory name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "n_epochs = 1000\n",
@@ -845,11 +761,13 @@
     "    sess.run(init)\n",
     "    \n",
     "    for epoch in range(n_epochs):\n",
+    "        if epoch % 100 == 0: # checkpoint every 100 epochs\n",
+    "            save_path = saver.save(sess, \"./tmp/my_model.ckpt\")\n",
     "        for batch_index in range(n_batches):\n",
     "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
-    "            if epoch % 100 == 0: # checkpoint every 100 epochs\n",
-    "                save_path = saver.save(sess, \"./tmp/my_model.ckpt\")\n",
-    "                print(\"Epoch \", epoch, \"MSE = \", mse_val)\n",
+    "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
+    "\n",
+    "            \n",
     "\n",
     "# restoring your model\n",
     "# with tf.Sesson() as sess:\n",
@@ -858,6 +776,87 @@
     "    \n",
     "    best_theta = theta.eval()\n",
     "    save_path = saver.save(sess, \"./tmp/my_model_final.ckpt\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing the Graph and Training Curves Using TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The TensorBoard nicely display interactive visulizations of some taining stats you feed in your webv browser (e.g., learning curves).\n",
+    "1. writes the graph definition and some training stats - the training error (MSE).\n",
+    "2. need to use a different log directory every time you run your program: include a timestamp in the log directory name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
+    "root_logdir = \"tf_logs\"\n",
+    "logdir =  \"./{}/run-{}/\".format(root_logdir, now)\n",
+    "\n",
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "X = tf.placeholder(tf.float32, shape=(None, n+1), name=\"X\")\n",
+    "y = tf.placeholder(tf.float32, shape=(None, 1), name=\"y\")\n",
+    "\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "error = y_pred - y\n",
+    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
+    "\n",
+    "training_op = optimizer.minimize(mse)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "saver = tf.train.Saver()\n",
+    "# saver = tf.train.Saver({\"weights\": theta})\n",
+    "\n",
+    "# creates a node in the graph that will evaluate the MSE value \n",
+    "# and write it to a TensorBoard-compatible bianry log string called a summary\n",
+    "mse_summary = tf.summary.scalar('MSE', mse)\n",
+    "# creates a FileWriter that you will use to write summaries to logfiles in the log directory.\n",
+    "file_writer = tf.summary.FileWriter(logdir, tf.get_default_graph())\n",
+    "\n",
+    "batch_size = 100\n",
+    "n_batches = int(np.ceil(m / batch_size))\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        if epoch % 100 == 0: # checkpoint every 100 epochs\n",
+    "            save_path = saver.save(sess, \"./tmp/my_model.ckpt\")\n",
+    "        for batch_index in range(n_batches):\n",
+    "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
+    "            if batch_index % 10 == 0: # Avoid logging training stats at every single training step\n",
+    "                summary_str = mse_summary.eval(feed_dict={X: X_batch, y: y_batch})\n",
+    "                step = epoch * n_batches + batch_index\n",
+    "                file_writer.add_summary(summary_str, step)\n",
+    "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
+    "\n",
+    "# restoring your model\n",
+    "# with tf.Sesson() as sess:\n",
+    "    # saver.restore(sess, \"./tmp/my_model_final.ckpt\") \n",
+    "\n",
+    "    \n",
+    "    best_theta = theta.eval()\n",
+    "    save_path = saver.save(sess, \"./tmp/my_model_final.ckpt\")\n",
+    "file_writer.close()"
    ]
   }
  ],
