tf_basics rearranged

--- a/tensorflow_basics_3.ipynb
+++ b/tensorflow_basics_3.ipynb
@@ -179,6 +179,88 @@
     "    save_path = saver.save(sess, \"./tmp/my_model_final.ckpt\")\n",
     "file_writer.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Name Scopes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph can easily become cluttered with thousands of nodes. To avoid this, you can create name *scopes* to group related nodes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
+    "root_logdir = \"tf_logs\"\n",
+    "logdir =  \"./{}/run-{}/\".format(root_logdir, now)\n",
+    "\n",
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "X = tf.placeholder(tf.float32, shape=(None, n+1), name=\"X\")\n",
+    "y = tf.placeholder(tf.float32, shape=(None, 1), name=\"y\")\n",
+    "\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\")\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "\n",
+    "\n",
+    "# define the error and mse ops within a name scope called \"loss\":\n",
+    "with tf.name_scope(\"loss\") as scope:\n",
+    "    error = y_pred - y\n",
+    "    mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
+    "\n",
+    "training_op = optimizer.minimize(mse)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "saver = tf.train.Saver()\n",
+    "# saver = tf.train.Saver({\"weights\": theta})\n",
+    "\n",
+    "mse_summary = tf.summary.scalar('MSE', mse)\n",
+    "file_writer = tf.summary.FileWriter(logdir, tf.get_default_graph())\n",
+    "\n",
+    "batch_size = 100\n",
+    "n_batches = int(np.ceil(m / batch_size))\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        if epoch % 100 == 0: # checkpoint every 100 epochs\n",
+    "            save_path = saver.save(sess, \"./tmp/my_model.ckpt\")\n",
+    "        for batch_index in range(n_batches):\n",
+    "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
+    "            if batch_index % 10 == 0: # Avoid logging training stats at every single training step\n",
+    "                summary_str = mse_summary.eval(feed_dict={X: X_batch, y: y_batch})\n",
+    "                step = epoch * n_batches + batch_index\n",
+    "                file_writer.add_summary(summary_str, step)\n",
+    "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
+    "\n",
+    "# restoring your model\n",
+    "# with tf.Sesson() as sess:\n",
+    "    # saver.restore(sess, \"./tmp/my_model_final.ckpt\") \n",
+    "\n",
+    "    \n",
+    "    best_theta = theta.eval()\n",
+    "    save_path = saver.save(sess, \"./tmp/my_model_final.ckpt\")\n",
+    "file_writer.close()"
+   ]
   }
  ],
  "metadata": {
