gitignore and tf_basics_summary added

--- a/tensorflow_basics_2.ipynb
+++ b/tensorflow_basics_2.ipynb
@@ -72,39 +72,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Normalize the feature vector: scaled_housing_data_plus_bias\n",
-    "scaler =preprocessing.StandardScaler().fit(housing.data)\n",
-    "scaled_housing_data = scaler.transform(housing.data)\n",
-    "scaled_housing_data_plus_bias = np.c_[np.ones((m, 1)), scaled_housing_data]"
+    "scaled_housing = StandardScaler().fit_transform(housing.data)\n",
+    "scaled_housing_data_plus_bias = np.c_[np.ones((m, 1)), scaled_housing]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 8.01159\n",
-      "Epoch 100 MSE = 0.642913\n",
-      "Epoch 200 MSE = 0.529278\n",
-      "Epoch 300 MSE = 0.526697\n",
-      "Epoch 400 MSE = 0.526188\n",
-      "Epoch 500 MSE = 0.525818\n",
-      "Epoch 600 MSE = 0.525527\n",
-      "Epoch 700 MSE = 0.525295\n",
-      "Epoch 800 MSE = 0.525111\n",
-      "Epoch 900 MSE = 0.524964\n"
+      "Epoch 0 MSE = 11.1691\n",
+      "Epoch 100 MSE = 0.901225\n",
+      "Epoch 200 MSE = 0.659847\n",
+      "Epoch 300 MSE = 0.622223\n",
+      "Epoch 400 MSE = 0.598159\n",
+      "Epoch 500 MSE = 0.580397\n",
+      "Epoch 600 MSE = 0.567124\n",
+      "Epoch 700 MSE = 0.557157\n",
+      "Epoch 800 MSE = 0.549641\n",
+      "Epoch 900 MSE = 0.543947\n"
      ]
     }
    ],
