--- a/tensorflow_basics_3.ipynb
+++ b/tensorflow_basics_3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -32,14 +32,13 @@
     "housing_data_plus_bias = np.c_[np.ones((m, 1)), housing.data] # (20640, 9)\n",
     "\n",
     "# Normalize the feature vector: scaled_housing_data_plus_bias\n",
-    "scaler =preprocessing.StandardScaler().fit(housing.data)\n",
-    "scaled_housing_data = scaler.transform(housing.data)\n",
+    "scaled_housing_data = preprocessing.StandardScaler().fit_transform(housing.data)\n",
     "scaled_housing_data_plus_bias = np.c_[np.ones((m, 1)), scaled_housing_data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_epochs = 1000\n",
@@ -115,10 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
